posicionamento de logo e subtítulo

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/dist/output.css" rel="stylesheet" />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Young+Serif&display=swap"
+      rel="stylesheet"
+    />
+    <title>PVBT - Escola de Beach Tennis</title>
   </head>
   <body>
-    <h1 class="text-3xl font-bold">Hello world!</h1>
+    <div class="main">
+      <div class="header flex relative items-center">
+        <img
+          src="./assets/images/hero.png"
+          alt="foto da escola de beach tennis"
+          class="max-h-max w-full"
+        />
+        <div
+          class="header--content absolute flex items-center justify-center w-full h-full before:bg-black before:content-[''] before:absolute before:top-0 before:right-0 before:bottom-0 before:left-0 before:opacity-70"
+        >
+          <div class="header--subtitle flex items-center absolute w-11/12 max-w-[1280px]">
+            <img src="./assets/images/logo.png" alt="logo da escola PVBT" class="" />
+            <h2 class="title-section text-6xl text-white w-[490px] absolute left-[550px]">
+              Venha pro play no melhor lugar da cidade
+            </h2>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
