--- a/src/index.html
+++ b/src/index.html
@@ -15,17 +15,13 @@
   <body>
     <div class="main">
       <div class="header flex relative items-center">
-        <img
-          src="./assets/images/hero.png"
-          alt="foto da escola de beach tennis"
-          class="max-h-max w-full"
-        />
+        <img src="./assets/images/hero.png" alt="foto da escola de beach tennis" class="w-full" />
         <div
           class="header--content absolute flex items-center justify-center w-full h-full before:bg-black before:content-[''] before:absolute before:top-0 before:right-0 before:bottom-0 before:left-0 before:opacity-70"
         >
           <div class="header--subtitle flex items-center absolute w-11/12 max-w-[1280px]">
             <img src="./assets/images/logo.png" alt="logo da escola PVBT" class="" />
-            <h2 class="title-section text-6xl text-white w-[490px] absolute left-[550px]">
+            <h2 class="title-section text-6xl text-white w-[490px] absolute left-[40%]">
               Venha pro play no melhor lugar da cidade
             </h2>
           </div>
