Ajuste na responsividade e inclusão do menu

--- a/src/index.html
+++ b/src/index.html
@@ -19,11 +19,19 @@
         <div
           class="header--content absolute flex items-center justify-center w-full h-full before:bg-black before:content-[''] before:absolute before:top-0 before:right-0 before:bottom-0 before:left-0 before:opacity-70"
         >
-          <div class="header--subtitle flex items-center absolute w-11/12 max-w-[1280px]">
-            <img src="./assets/images/logo.png" alt="logo da escola PVBT" class="" />
-            <h2 class="title-section text-6xl text-white w-[490px] absolute left-[40%]">
+          <div class="header--subtitle flex items-center relative w-11/12 h-full max-w-[1280px]">
+            <img src="./assets/images/logo.png" alt="logo da escola PVBT" class="w-36 md:w-auto" />
+            <h2
+              class="title-section text-3xl md:text-5xl lg:text-6xl text-white lg:w-[490px] absolute left-[40%]"
+            >
               Venha pro play no melhor lugar da cidade
             </h2>
+            <nav class="header--menu text-white absolute top-4 right-0 space-x-4 hidden lg:block">
+              <a href="#Sobre">Sobre a escola</a>
+              <a href="#Turma">Turmas e Horários</a>
+              <a href="#Professores">Nossos professores</a>
+              <a href="#Localizacao">Localização</a>
+            </nav>
           </div>
         </div>
       </div>
