Seção Sobre a escola

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,8 @@
   </head>
   <body>
     <div class="main">
-      <div class="header flex relative items-center">
+      <!-- header -->
+      <div class="header flex relative items-center justify-center">
         <img src="./assets/images/hero.png" alt="foto da escola de beach tennis" class="w-full" />
         <div
           class="header--content absolute flex items-center justify-center w-full h-full before:bg-black before:content-[''] before:absolute before:top-0 before:right-0 before:bottom-0 before:left-0 before:opacity-70"
@@ -33,6 +34,22 @@
               <a href="#Localizacao">Localização</a>
             </nav>
           </div>
+        </div>
+      </div>
+
+      <!-- sobre a escola -->
+      <div
+        id="Sobre"
+        class="flex items-center justify-center relative h-96 bg-none lg:bg-no-repeat lg:bg-[url('../src/assets/images/bg-laranja.png')] lg:bg-left-top before:bg-[url('../src/assets/images/line.png')] before:content-[''] before:bg-repeat-x before:absolute before:top-0 before:left-0 before:bottom-0 before:right-0"
+      >
+        <div class="Sobre--content max-w-[1280px] p-8 lg:pl-60">
+          <h2 class="title-section text-5xl text-orange-500 mb-4">Sobre a escola</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis diam nec mauris dapibus
+            accumsan vitae vestibulum urna. Curabitur id sem in justo pulvinar faucibus nec vitae
+            libero. Proin risus sem, varius vel dictum id, tempus vel ligula. Vivamus et viverra
+            justo. Aliquam ut justo gravida, vehicula nibh in, aliquet magna.
+          </p>
         </div>
       </div>
     </div>
