--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
             </h2>
             <nav class="header--menu text-white absolute top-4 right-0 space-x-4 hidden lg:block">
               <a href="#Sobre">Sobre a escola</a>
-              <a href="#Turma">Turmas e Horários</a>
+              <a href="#Turmas">Turmas e Horários</a>
               <a href="#Professores">Nossos professores</a>
               <a href="#Localizacao">Localização</a>
             </nav>
@@ -40,16 +40,53 @@
       <!-- sobre a escola -->
       <div
         id="Sobre"
-        class="flex items-center justify-center relative h-96 bg-none lg:bg-no-repeat lg:bg-[url('../src/assets/images/bg-laranja.png')] lg:bg-left-top before:bg-[url('../src/assets/images/line.png')] before:content-[''] before:bg-repeat-x before:absolute before:top-0 before:left-0 before:bottom-0 before:right-0"
+        class="flex items-center justify-center h-96 relative bg-none lg:bg-no-repeat lg:bg-[url('../src/assets/images/bg-laranja.png')] lg:bg-left-top before:bg-[url('../src/assets/images/line.png')] before:content-[''] before:bg-repeat-x before:absolute before:top-0 before:left-0 before:bottom-0 before:right-0"
       >
         <div class="Sobre--content max-w-[1280px] p-8 lg:pl-60">
-          <h2 class="title-section text-5xl text-orange-500 mb-4">Sobre a escola</h2>
+          <h2 class="title-section text-4xl lg:text-5xl text-orange-500 mb-4">Sobre a escola</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis diam nec mauris dapibus
             accumsan vitae vestibulum urna. Curabitur id sem in justo pulvinar faucibus nec vitae
             libero. Proin risus sem, varius vel dictum id, tempus vel ligula. Vivamus et viverra
             justo. Aliquam ut justo gravida, vehicula nibh in, aliquet magna.
           </p>
+        </div>
+      </div>
+
+      <!-- turmas e horarios -->
+      <div id="Turmas" class="bg-[#E1E815] mt-16 flex">
+        <div class="turmas--content w-11/12 px-8 relative -top-16 space-y-8">
+          <h2 class="title-section text-4xl lg:text-5xl text-[#E1E815]">Turmas e horários</h2>
+          <p>Aulas individuais ou em grupo (até 6 alunos)</p>
+          <div class="flex space-x-16">
+            <div>
+              <h3 class="font-bold">Turmas</h3>
+              <ul class="list-disc ml-6">
+                <li>Infantil</li>
+                <li>Iniciantes</li>
+                <li>Intermediários</li>
+                <li>Avançados</li>
+              </ul>
+            </div>
+            <div>
+              <h3 class="font-bold">Horário das aulas</h3>
+              <ul class="list-disc ml-6">
+                <li>Segunda a Quinta</li>
+                <li>de 17h às 21h</li>
+              </ul>
+            </div>
+          </div>
+          <div>
+            <h3 class="font-bold">Aluguel de quadras e Day use</h3>
+            <ul class="list-disc ml-6">
+              <li>Segunda a Sexta</li>
+              <li>de 17h às 21h</li>
+              <li>Reservas: (85) 98787.1076</li>
+            </ul>
+          </div>
+        </div>
+        <div class="turmas--picture relative -top-16 hidden md:block">
+          <img src="../src/assets/images/aula-beach-tennis.png" />
         </div>
       </div>
     </div>
