Estrutura e config inicial da sessão Professores

--- a/src/index.html
+++ b/src/index.html
@@ -89,6 +89,56 @@
           <img src="../src/assets/images/aula-beach-tennis.png" />
         </div>
       </div>
+
+      <!-- professores -->
+      <div id="Professores" class="relative">
+        <div class="rectangle w-[350px] h-[340px] absolute bg-[#05C0C9] -top-12 -left-24"></div>
+        <h2 class="title-section text-4xl lg:text-5xl text-[#05C0C9] py-8 ml-72">
+          Nossos professores
+        </h2>
+        <div class="flex">
+          <div class="teacher relative w-[315px] h-[300px]">
+            <img src="../src/assets/images/thumbnail-teacher.png" />
+            <h3
+              class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-4 text-white text-2xl title-section"
+            >
+              Paulo Victor
+            </h3>
+          </div>
+          <div class="teacher relative w-[315px] h-[300px]">
+            <img src="../src/assets/images/thumbnail-teacher.png" />
+            <h3
+              class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-4 text-white text-2xl title-section"
+            >
+              Paulo Victor
+            </h3>
+          </div>
+          <div class="teacher relative w-[315px] h-[300px]">
+            <img src="../src/assets/images/thumbnail-teacher.png" />
+            <h3
+              class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-4 text-white text-2xl title-section"
+            >
+              Paulo Victor
+            </h3>
+          </div>
+          <div class="teacher relative w-[315px] h-[300px]">
+            <img src="../src/assets/images/thumbnail-teacher.png" />
+            <h3
+              class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-4 text-white text-2xl title-section"
+            >
+              Paulo Victor
+            </h3>
+          </div>
+          <div class="teacher relative w-[315px] h-[300px]">
+            <img src="../src/assets/images/thumbnail-teacher.png" />
+            <h3
+              class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-4 text-white text-2xl title-section"
+            >
+              Paulo Victor
+            </h3>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
