--- a/src/index.html
+++ b/src/index.html
@@ -96,41 +96,41 @@
         <h2 class="title-section text-4xl lg:text-5xl text-[#05C0C9] py-8 ml-72">
           Nossos professores
         </h2>
-        <div class="flex">
-          <div class="teacher relative w-[315px] h-[300px]">
-            <img src="../src/assets/images/thumbnail-teacher.png" />
+        <div class="flex flex-wrap -space-x-8 gap-2 justify-center">
+          <div class="teacher relative">
+            <img src="../src/assets/images/thumbnail-teacher.png" class="w-[290px]" />
             <h3
               class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-4 text-white text-2xl title-section"
             >
               Paulo Victor
             </h3>
           </div>
-          <div class="teacher relative w-[315px] h-[300px]">
-            <img src="../src/assets/images/thumbnail-teacher.png" />
+          <div class="teacher relative">
+            <img src="../src/assets/images/thumbnail-teacher.png" class="w-[290px]" />
             <h3
               class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-4 text-white text-2xl title-section"
             >
               Paulo Victor
             </h3>
           </div>
-          <div class="teacher relative w-[315px] h-[300px]">
-            <img src="../src/assets/images/thumbnail-teacher.png" />
+          <div class="teacher relative">
+            <img src="../src/assets/images/thumbnail-teacher.png" class="w-[290px]" />
             <h3
               class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-4 text-white text-2xl title-section"
             >
               Paulo Victor
             </h3>
           </div>
-          <div class="teacher relative w-[315px] h-[300px]">
-            <img src="../src/assets/images/thumbnail-teacher.png" />
+          <div class="teacher relative">
+            <img src="../src/assets/images/thumbnail-teacher.png" class="w-[290px]" />
             <h3
               class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-4 text-white text-2xl title-section"
             >
               Paulo Victor
             </h3>
           </div>
-          <div class="teacher relative w-[315px] h-[300px]">
-            <img src="../src/assets/images/thumbnail-teacher.png" />
+          <div class="teacher relative">
+            <img src="../src/assets/images/thumbnail-teacher.png" class="w-[290px]" />
             <h3
               class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-4 text-white text-2xl title-section"
             >
