adjust section teachers

--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
         <h2 class="title-section text-4xl lg:text-5xl text-[#05C0C9] py-8 ml-72">
           Nossos professores
         </h2>
-        <div class="flex flex-wrap -space-x-8 gap-2 justify-center">
+        <div class="flex flex-wrap justify-center">
           <div class="teacher relative">
             <img src="../src/assets/images/thumbnail-teacher.png" class="w-[290px]" />
             <h3
