--- a/src/index.html
+++ b/src/index.html
@@ -96,43 +96,43 @@
         <h2 class="title-section text-4xl lg:text-5xl text-[#05C0C9] py-8 ml-72">
           Nossos professores
         </h2>
-        <div class="flex flex-wrap justify-center">
-          <div class="teacher relative">
-            <img src="../src/assets/images/thumbnail-teacher.png" class="w-[290px]" />
+        <div class="flex flex-wrap justify-center xl:justify-start -space-x-8 gap-2 px-8">
+          <div class="teacher relative w-2/5 sm:w-[275px]">
+            <img src="../src/assets/images/thumbnail-teacher.png" />
             <h3
-              class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-4 text-white text-2xl title-section"
+              class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-4 text-white text-xl sm:text-2xl title-section"
             >
               Paulo Victor
             </h3>
           </div>
-          <div class="teacher relative">
-            <img src="../src/assets/images/thumbnail-teacher.png" class="w-[290px]" />
+          <div class="teacher relative w-2/5 sm:w-[275px]">
+            <img src="../src/assets/images/thumbnail-teacher.png" />
             <h3
-              class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-4 text-white text-2xl title-section"
+              class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-4 text-white text-xl sm:text-2xl title-section"
             >
               Paulo Victor
             </h3>
           </div>
-          <div class="teacher relative">
-            <img src="../src/assets/images/thumbnail-teacher.png" class="w-[290px]" />
+          <div class="teacher relative w-2/5 sm:w-[275px]">
+            <img src="../src/assets/images/thumbnail-teacher.png" />
             <h3
-              class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-4 text-white text-2xl title-section"
+              class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-4 text-white text-xl sm:text-2xl title-section"
             >
               Paulo Victor
             </h3>
           </div>
-          <div class="teacher relative">
-            <img src="../src/assets/images/thumbnail-teacher.png" class="w-[290px]" />
+          <div class="teacher relative w-2/5 sm:w-[275px]">
+            <img src="../src/assets/images/thumbnail-teacher.png" />
             <h3
-              class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-4 text-white text-2xl title-section"
+              class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-4 text-white text-xl sm:text-2xl title-section"
             >
               Paulo Victor
             </h3>
           </div>
-          <div class="teacher relative">
-            <img src="../src/assets/images/thumbnail-teacher.png" class="w-[290px]" />
+          <div class="teacher relative w-2/5 sm:w-[275px]">
+            <img src="../src/assets/images/thumbnail-teacher.png" />
             <h3
-              class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-4 text-white text-2xl title-section"
+              class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-4 text-white text-xl sm:text-2xl title-section"
             >
               Paulo Victor
             </h3>
