fix responsive image for classes

--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,9 @@
             </ul>
           </div>
         </div>
-        <div class="turmas--picture relative -top-16 hidden md:block">
+        <div
+          class="turmas--picture relative -top-16 hidden lg:flex justify-end text-right w-full w-max-[750px]"
+        >
           <img src="../src/assets/images/aula-beach-tennis.png" />
         </div>
       </div>
