--- a/src/index.html
+++ b/src/index.html
@@ -95,11 +95,11 @@
       <!-- professores -->
       <div id="Professores" class="relative">
         <div class="rectangle w-[350px] h-[340px] absolute bg-[#05C0C9] -top-12 -left-24"></div>
-        <h2 class="title-section text-4xl lg:text-5xl text-[#05C0C9] py-8 ml-72">
+        <h2 class="title-section text-4xl lg:text-5xl text-[#05C0C9] py-8 ml-64 sm:ml-72">
           Nossos professores
         </h2>
-        <div class="flex flex-wrap justify-center xl:justify-start -space-x-8 gap-2 px-8">
-          <div class="teacher relative w-2/5 sm:w-[275px]">
+        <div class="flex flex-wrap justify-center xl:justify-start -space-x-8 gap-2 px-4">
+          <div class="teacher relative w-1/2 sm:w-[265px]">
             <img src="../src/assets/images/thumbnail-teacher.png" />
             <h3
               class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-4 text-white text-xl sm:text-2xl title-section"
@@ -107,7 +107,7 @@
               Paulo Victor
             </h3>
           </div>
-          <div class="teacher relative w-2/5 sm:w-[275px]">
+          <div class="teacher relative w-1/2 sm:w-[265px]">
             <img src="../src/assets/images/thumbnail-teacher.png" />
             <h3
               class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-4 text-white text-xl sm:text-2xl title-section"
@@ -115,7 +115,7 @@
               Paulo Victor
             </h3>
           </div>
-          <div class="teacher relative w-2/5 sm:w-[275px]">
+          <div class="teacher relative w-1/2 sm:w-[265px]">
             <img src="../src/assets/images/thumbnail-teacher.png" />
             <h3
               class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-4 text-white text-xl sm:text-2xl title-section"
@@ -123,7 +123,7 @@
               Paulo Victor
             </h3>
           </div>
-          <div class="teacher relative w-2/5 sm:w-[275px]">
+          <div class="teacher relative w-1/2 sm:w-[265px]">
             <img src="../src/assets/images/thumbnail-teacher.png" />
             <h3
               class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-4 text-white text-xl sm:text-2xl title-section"
@@ -131,7 +131,7 @@
               Paulo Victor
             </h3>
           </div>
-          <div class="teacher relative w-2/5 sm:w-[275px]">
+          <div class="teacher relative w-1/2 sm:w-[265px]">
             <img src="../src/assets/images/thumbnail-teacher.png" />
             <h3
               class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-4 text-white text-xl sm:text-2xl title-section"
