--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="main">
       <!-- header -->
-      <div class="header flex relative items-center justify-center">
+      <section class="header flex relative items-center justify-center">
         <img src="./assets/images/hero.png" alt="foto da escola de beach tennis" class="w-full" />
         <div
           class="header--content absolute flex items-center justify-center w-full h-full before:bg-black before:content-[''] before:absolute before:top-0 before:right-0 before:bottom-0 before:left-0 before:opacity-70"
@@ -35,10 +35,10 @@
             </nav>
           </div>
         </div>
-      </div>
+      </section>
 
       <!-- sobre a escola -->
-      <div
+      <section
         id="Sobre"
         class="flex items-center justify-center h-96 relative bg-none lg:bg-no-repeat lg:bg-[url('../src/assets/images/bg-laranja.png')] lg:bg-left-top before:bg-[url('../src/assets/images/line.png')] before:content-[''] before:bg-repeat-x before:absolute before:top-0 before:left-0 before:bottom-0 before:right-0"
       >
@@ -51,10 +51,10 @@
             justo. Aliquam ut justo gravida, vehicula nibh in, aliquet magna.
           </p>
         </div>
-      </div>
+      </section>
 
       <!-- turmas e horarios -->
-      <div id="Turmas" class="bg-[#E1E815] mt-16 flex">
+      <section id="Turmas" class="bg-[#E1E815] mt-16 flex">
         <div class="turmas--content w-11/12 px-8 relative -top-16 space-y-8">
           <h2 class="title-section text-4xl lg:text-5xl text-[#E1E815]">Turmas e horários</h2>
           <p>Aulas individuais ou em grupo (até 6 alunos)</p>
@@ -86,14 +86,14 @@
           </div>
         </div>
         <div
-          class="turmas--picture relative -top-16 hidden lg:flex justify-end text-right w-full w-max-[750px]"
+          class="turmas--picture relative -top-16 hidden lg:flex justify-end w-full w-max-[750px]"
         >
           <img src="../src/assets/images/aula-beach-tennis.png" />
         </div>
-      </div>
+      </section>
 
       <!-- professores -->
-      <div id="Professores" class="relative">
+      <section id="Professores" class="relative">
         <div class="rectangle w-[350px] h-[340px] absolute bg-[#05C0C9] -top-12 -left-24"></div>
         <h2 class="title-section text-4xl lg:text-5xl text-[#05C0C9] py-8 ml-64 sm:ml-72">
           Nossos professores
@@ -102,7 +102,7 @@
           <div class="teacher relative w-1/2 sm:w-[265px]">
             <img src="../src/assets/images/thumbnail-teacher.png" />
             <h3
-              class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-4 text-white text-xl sm:text-2xl title-section"
+              class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-2 text-white text-xl title-section"
             >
               Paulo Victor
             </h3>
@@ -110,7 +110,7 @@
           <div class="teacher relative w-1/2 sm:w-[265px]">
             <img src="../src/assets/images/thumbnail-teacher.png" />
             <h3
-              class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-4 text-white text-xl sm:text-2xl title-section"
+              class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-2 text-white text-xl title-section"
             >
               Paulo Victor
             </h3>
@@ -118,7 +118,7 @@
           <div class="teacher relative w-1/2 sm:w-[265px]">
             <img src="../src/assets/images/thumbnail-teacher.png" />
             <h3
-              class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-4 text-white text-xl sm:text-2xl title-section"
+              class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-2 text-white text-xl title-section"
             >
               Paulo Victor
             </h3>
@@ -126,7 +126,7 @@
           <div class="teacher relative w-1/2 sm:w-[265px]">
             <img src="../src/assets/images/thumbnail-teacher.png" />
             <h3
-              class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-4 text-white text-xl sm:text-2xl title-section"
+              class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-2 text-white text-xl title-section"
             >
               Paulo Victor
             </h3>
@@ -134,13 +134,57 @@
           <div class="teacher relative w-1/2 sm:w-[265px]">
             <img src="../src/assets/images/thumbnail-teacher.png" />
             <h3
-              class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-4 text-white text-xl sm:text-2xl title-section"
+              class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-2 text-white text-xl title-section"
             >
               Paulo Victor
             </h3>
           </div>
         </div>
-      </div>
+      </section>
+
+      <!-- localização -->
+      <section id="Localizacao" class="bg-indigo-800 my-4">
+        <h2 class="title-section text-4xl lg:text-5xl text-white py-8 px-4 h-full">Localização</h2>
+        <div class="location-content lg:flex pb-4">
+          <div class="location-infos text-white px-4 space-y-8">
+            <div>
+              <h3 class="font-bold">Endereço</h3>
+              <address>
+                <p>Aterro da Praia de Iracema</p>
+                <p>Av. Historiador Raimundo Girão, 955 - Meireles</p>
+                <p>Fortaleza/Ceará</p>
+              </address>
+            </div>
+            <div>
+              <h3 class="font-bold">Horário de funcionamento</h3>
+              <p>Segunda a Sexta - de 17h às 21h</p>
+              <p>Day use e aluguel de quadras disponíveis diariamente</p>
+            </div>
+            <div>
+              <p>cel.: +55 (85) 98787.1076</p>
+              <p>
+                whatsapp:
+                <a href="https://web.whatsapp.com/send?phone=5585987871076" target="_blank"
+                  >(85) 98787.1076</a
+                >
+              </p>
+              <p>e-mail: <a href="mailto:email@gmail.com" target="_blank">email@gmail.com</a></p>
+            </div>
+          </div>
+
+          <div class="location-map my-8 flex w-full justify-center lg:justify-end">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d497.6752641912723!2d-38.50723038042292!3d-3.722165176346372!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c7494b767ca795%3A0x780cd881fe4a8ead!2sPVBT%20ESCOLA%20DE%20BEACH%20TENNIS!5e0!3m2!1spt-BR!2sbr!4v1699037364041!5m2!1spt-BR!2sbr"
+              width="740"
+              height="350"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
