--- a/src/index.html
+++ b/src/index.html
@@ -146,7 +146,7 @@
       <section id="Localizacao" class="bg-indigo-800 my-4">
         <h2 class="title-section text-4xl lg:text-5xl text-white py-8 px-4 h-full">Localização</h2>
         <div class="location-content lg:flex pb-4">
-          <div class="location-infos text-white px-4 space-y-8">
+          <div class="location-infos text-white px-4 space-y-8 w-full lg:w-1/2">
             <div>
               <h3 class="font-bold">Endereço</h3>
               <address>
@@ -172,7 +172,7 @@
             </div>
           </div>
 
-          <div class="location-map my-8 flex w-full justify-center lg:justify-end">
+          <div class="location-map my-8 lg:my-0 flex w-full justify-center lg:justify-end">
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d497.6752641912723!2d-38.50723038042292!3d-3.722165176346372!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c7494b767ca795%3A0x780cd881fe4a8ead!2sPVBT%20ESCOLA%20DE%20BEACH%20TENNIS!5e0!3m2!1spt-BR!2sbr!4v1699037364041!5m2!1spt-BR!2sbr"
               width="740"
