section footer done

--- a/src/index.html
+++ b/src/index.html
@@ -161,14 +161,20 @@
               <p>Day use e aluguel de quadras disponíveis diariamente</p>
             </div>
             <div>
-              <p>cel.: +55 (85) 98787.1076</p>
               <p>
-                whatsapp:
+                <span class="font-bold">cel.:</span>
+                <a href="tel:+5585987871076" target="_blank">(85) 98787.1076</a>
+              </p>
+              <p>
+                <span class="font-bold">whatsapp:</span>
                 <a href="https://web.whatsapp.com/send?phone=5585987871076" target="_blank"
                   >(85) 98787.1076</a
                 >
               </p>
-              <p>e-mail: <a href="mailto:email@gmail.com" target="_blank">email@gmail.com</a></p>
+              <p>
+                <span class="font-bold">e-mail:</span>
+                <a href="mailto:email@gmail.com" target="_blank">email@gmail.com</a>
+              </p>
             </div>
           </div>
 
@@ -185,6 +191,15 @@
           </div>
         </div>
       </section>
+
+      <!-- footer -->
+      <footer class="bg-[#E1E815] p-4 flex items-center space-x-2">
+        <img src="./assets/images/mini-logo.png" alt="Logo PVBT - Escola de Beach Tennis" />
+        <div class="footer-info text-orange-500">
+          <p class="text-sm font-bold">PVBT - Escola de Beach Tennis</p>
+          <p class="text-xs">desenvolvido por Joares Miranda</p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
