--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <!-- sobre a escola -->
       <section
         id="Sobre"
-        class="flex items-center justify-center h-96 relative bg-none lg:bg-no-repeat lg:bg-[url('../src/assets/images/bg-laranja.png')] lg:bg-left-top before:bg-[url('../src/assets/images/line.png')] before:content-[''] before:bg-repeat-x before:absolute before:top-0 before:left-0 before:bottom-0 before:right-0"
+        class="flex items-center justify-center h-96 relative bg-none lg:bg-no-repeat lg:bg-[url('./assets/images/bg-laranja.png')] lg:bg-left-top before:bg-[url('./assets/images/line.png')] before:content-[''] before:bg-repeat-x before:absolute before:top-0 before:left-0 before:bottom-0 before:right-0"
       >
         <div class="Sobre--content max-w-[1280px] p-8 lg:pl-60">
           <h2 class="title-section text-4xl lg:text-5xl text-orange-500 mb-4">Sobre a escola</h2>
@@ -88,7 +88,7 @@
         <div
           class="turmas--picture relative -top-16 hidden lg:flex justify-end w-full w-max-[750px]"
         >
-          <img src="../src/assets/images/aula-beach-tennis.png" />
+          <img src="./assets/images/aula-beach-tennis.png" />
         </div>
       </section>
 
@@ -100,7 +100,7 @@
         </h2>
         <div class="flex flex-wrap justify-center xl:justify-start -space-x-8 gap-2 px-4">
           <div class="teacher relative w-1/2 sm:w-[265px]">
-            <img src="../src/assets/images/thumbnail-teacher.png" />
+            <img src="./assets/images/thumbnail-teacher.png" />
             <h3
               class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-2 text-white text-xl title-section"
             >
@@ -108,7 +108,7 @@
             </h3>
           </div>
           <div class="teacher relative w-1/2 sm:w-[265px]">
-            <img src="../src/assets/images/thumbnail-teacher.png" />
+            <img src="./assets/images/thumbnail-teacher.png" />
             <h3
               class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-2 text-white text-xl title-section"
             >
@@ -116,7 +116,7 @@
             </h3>
           </div>
           <div class="teacher relative w-1/2 sm:w-[265px]">
-            <img src="../src/assets/images/thumbnail-teacher.png" />
+            <img src="./assets/images/thumbnail-teacher.png" />
             <h3
               class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-2 text-white text-xl title-section"
             >
@@ -124,7 +124,7 @@
             </h3>
           </div>
           <div class="teacher relative w-1/2 sm:w-[265px]">
-            <img src="../src/assets/images/thumbnail-teacher.png" />
+            <img src="./assets/images/thumbnail-teacher.png" />
             <h3
               class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-2 text-white text-xl title-section"
             >
@@ -132,7 +132,7 @@
             </h3>
           </div>
           <div class="teacher relative w-1/2 sm:w-[265px]">
-            <img src="../src/assets/images/thumbnail-teacher.png" />
+            <img src="./assets/images/thumbnail-teacher.png" />
             <h3
               class="absolute bottom-8 w-full bg-black/[0.7] px-8 py-2 text-white text-xl title-section"
             >
