--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link href="output.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <link rel="icon" type="image/x-icon" href="./assets/images/mini-logo.png" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Young+Serif&display=swap"
       rel="stylesheet"
