--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="header--subtitle flex items-center relative w-11/12 h-full max-w-[1280px]">
             <img src="./assets/images/logo.png" alt="logo da escola PVBT" class="w-36 md:w-auto" />
             <h2
-              class="title-section text-3xl md:text-5xl lg:text-6xl text-white lg:w-[490px] absolute left-[40%]"
+              class="title-section text-2xl md:text-5xl lg:text-6xl text-white lg:w-[490px] absolute left-[40%]"
             >
               Venha pro play no melhor lugar da cidade
             </h2>
@@ -57,9 +57,11 @@
       </section>
 
       <!-- turmas e horarios -->
-      <section id="Turmas" class="bg-[#E1E815] mt-16 flex">
-        <div class="turmas--content w-11/12 px-8 relative -top-16 space-y-8">
-          <h2 class="title-section text-4xl lg:text-5xl text-[#E1E815]">Turmas e horários</h2>
+      <section id="Turmas" class="bg-[#E1E815] mt-0 lg:mt-16 flex pb-8 lg:pb-0">
+        <div class="turmas--content w-11/12 p-8 relative lg:-top-24 space-y-8">
+          <h2 class="title-section text-4xl lg:text-5xl text-white lg:text-[#E1E815]">
+            Turmas e horários
+          </h2>
           <p>Aulas individuais ou em grupo (até 6 alunos)</p>
           <div class="flex space-x-16">
             <div>
@@ -88,17 +90,17 @@
             </ul>
           </div>
         </div>
-        <div
-          class="turmas--picture relative -top-16 hidden lg:flex justify-end w-full w-max-[750px]"
-        >
+        <div class="turmas--picture relative -top-16 hidden lg:flex justify-end w-full">
           <img src="./assets/images/aula-beach-tennis.png" />
         </div>
       </section>
 
       <!-- professores -->
-      <section id="Professores" class="relative">
-        <div class="rectangle w-[350px] h-[340px] absolute bg-[#05C0C9] -top-12 -left-24"></div>
-        <h2 class="title-section text-4xl lg:text-5xl text-[#05C0C9] py-8 ml-64 sm:ml-72">
+      <section id="Professores" class="relative bg-[#05C0C9] md:bg-white mt-4 pb-4">
+        <div
+          class="rectangle md:w-[350px] md:h-[340px] md:absolute md:bg-[#05C0C9] md:-top-12 md:-left-24"
+        ></div>
+        <h2 class="title-section text-4xl lg:text-5xl text-white md:text-[#05C0C9] p-8 md:ml-60">
           Nossos professores
         </h2>
         <div class="flex flex-wrap justify-center xl:justify-start -space-x-8 gap-2 px-4">
