--- a/index.html
+++ b/index.html
@@ -99,9 +99,15 @@
           </div>
           <div>
             <h3 class="font-bold">Que tal uma aula experimental gratuita?</h3>
-            <p>
+            <p class="flex items-center mt-1">
               <a href="https://api.whatsapp.com/send?phone=5585996811924" target="_blank"
-                >Clique e agende sua aula agora mesmo!</a
+                ><img
+                  src="./assets/images/icon-whatsapp.png"
+                  width="24px"
+                  height="24px"
+                  class="inline mr-2"
+                />
+                Agende sua aula agora mesmo!</a
               >
             </p>
           </div>
