changed button and link to whatsapp

--- a/index.html
+++ b/index.html
@@ -102,13 +102,11 @@
             <p class="flex items-center mt-1">
               <a href="https://api.whatsapp.com/send?phone=5585996811924" target="_blank"
                 ><img
-                  src="./assets/images/icon-whatsapp.png"
-                  width="24px"
-                  height="24px"
-                  class="inline mr-2"
+                  src="./assets/images/bt_whatsapp.png"
+                  alt="Botão para chat no whatsapp"
+                  class="my-2"
                 />
-                Agende sua aula agora mesmo!</a
-              >
+              </a>
             </p>
           </div>
         </div>
