first step to adjust

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
             <img
               src="./assets/images/logo.png"
               alt="logo da escola PVBT"
-              class="w-24 sm:w-36 md:w-auto"
+              class="w-32 md:w-auto mx-auto md:mx-0"
             />
             <h2
-              class="title-section text-xl md:text-4xl lg:text-5xl xl:text-6xl text-white lg:w-[490px] absolute left-[40%]"
+              class="title-section text-xl md:text-4xl lg:text-5xl xl:text-6xl text-white lg:w-[490px] absolute left-[40%] hidden md:block"
             >
               Venha pro play no melhor lugar da cidade
             </h2>
-            <nav class="header--menu text-white absolute top-4 right-0 space-x-4 hidden lg:block">
+            <nav class="header--menu text-white absolute top-4 right-0 space-x-4 hidden md:block">
               <a href="#Sobre">Sobre a escola</a>
               <a href="#Turmas">Turmas e Horários</a>
               <a href="#Professores">Nossos professores</a>
