remove subtitle for mobile

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="main">
       <!-- header -->
       <section class="header flex relative items-center justify-center">
-        <img src="./assets/images/hero.png" alt="foto da escola de beach tennis" class="w-full" />
+        <img src="./assets/images/hero.png" alt="foto da escola de beach tennis" class="w-[120%]" />
         <div
           class="header--content absolute flex items-center justify-center w-full h-full before:bg-black before:content-[''] before:absolute before:top-0 before:right-0 before:bottom-0 before:left-0 before:opacity-70"
         >
