--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta
+      name="description"
+      content="Escola de beach tennis localizada na Praia de Iracema, coração da cidade de Fortaleza - Ceará. Aulas individuais, em grupo ou avulsas, com professores certificados."
+    />
+
+    <meta
+      name="keywords"
+      content="beach, tennis, aula, praia, tênis, experimental, treino, play, escola, fortaleza, ceará, iracema, beira-mar, esporte"
+    />
+
+    <meta name="author" content="Joares Miranda" />
+
+    <link rel="canonical" href="http://www.pvbt.com.br" />
+
     <link href="output.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -24,10 +39,11 @@
           class="header--content absolute flex items-center justify-center w-full h-full before:bg-black before:content-[''] before:absolute before:top-0 before:right-0 before:bottom-0 before:left-0 before:opacity-70"
         >
           <div class="header--subtitle flex items-center relative w-11/12 h-full max-w-[1280px]">
+            <h1 class="hidden">PVBT - Escola de beach tennis</h1>
             <img
-              src="./assets/images/logo.png"
+              src="./assets/images/logo-pvbt-beach-tennis.png"
               alt="logo da escola PVBT"
-              class="w-32 md:w-auto mx-auto md:mx-0"
+              class="w-36 md:w-44 lg:w-60 mx-auto md:mx-0"
             />
             <h2
               class="title-section text-xl md:text-4xl lg:text-5xl xl:text-6xl text-white lg:w-[490px] absolute left-[40%] hidden md:block"
@@ -127,7 +143,7 @@
         </h2>
         <div class="flex flex-wrap justify-center xl:justify-start -space-x-8 gap-4 px-4">
           <div class="teacher relative w-1/2 sm:w-[265px]">
-            <img src="./assets/images/thumbnail-teacher.png" />
+            <img src="./assets/images/thumbnail-teacher.png" alt="Professor PVBT: Paulo Victor" />
             <h3
               class="absolute bottom-2 sm:bottom-8 w-full bg-black/[0.7] px-8 py-2 text-white text-base sm:text-xl title-section"
             >
@@ -135,35 +151,38 @@
             </h3>
           </div>
           <div class="teacher relative w-1/2 sm:w-[265px]">
-            <img src="./assets/images/thumbnail-teacher.png" />
+            <img
+              src="./assets/images/thumbnail-teacher.png"
+              alt="Professor PVBT: Victor Mesquita"
+            />
             <h3
               class="absolute bottom-2 sm:bottom-8 w-full bg-black/[0.7] px-8 py-2 text-white text-base sm:text-xl title-section"
             >
-              Paulo Victor
+              Victor Mesquita
             </h3>
           </div>
           <div class="teacher relative w-1/2 sm:w-[265px]">
-            <img src="./assets/images/thumbnail-teacher.png" />
+            <img src="./assets/images/thumbnail-teacher.png" alt="Professor PVBT: Abner Mateus" />
             <h3
               class="absolute bottom-2 sm:bottom-8 w-full bg-black/[0.7] px-8 py-2 text-white text-base sm:text-xl title-section"
             >
-              Paulo Victor
+              Abner Mateus
             </h3>
           </div>
           <div class="teacher relative w-1/2 sm:w-[265px]">
-            <img src="./assets/images/thumbnail-teacher.png" />
+            <img src="./assets/images/thumbnail-teacher.png" alt="Professor PVBT: Natãn Sales" />
             <h3
               class="absolute bottom-2 sm:bottom-8 w-full bg-black/[0.7] px-8 py-2 text-white text-base sm:text-xl title-section"
             >
-              Paulo Victor
+              Natãn Sales
             </h3>
           </div>
           <div class="teacher relative w-1/2 sm:w-[265px]">
-            <img src="./assets/images/thumbnail-teacher.png" />
+            <img src="./assets/images/thumbnail-teacher.png" alt="Professor PVBT: Cauê Aragão" />
             <h3
               class="absolute bottom-2 sm:bottom-8 w-full bg-black/[0.7] px-8 py-2 text-white text-base sm:text-xl title-section"
             >
-              Paulo Victor
+              Cauê Aragão
             </h3>
           </div>
         </div>
@@ -191,8 +210,8 @@
             </div>
             <div>
               <p>
-                <span class="font-bold">cel.:</span>
-                <a href="tel:+5585996811924" target="_blank">(85) 99681.1924</a>
+                <span class="font-bold">Informações:</span>
+                <a href="tel:+5585996811924" target="_blank">+55 (85) 99681.1924</a>
               </p>
               <p>
                 <span class="font-bold">whatsapp:</span>
@@ -219,7 +238,11 @@
 
       <!-- footer -->
       <footer class="bg-[#E1E815] p-4 flex items-center space-x-2">
-        <img src="./assets/images/mini-logo.png" alt="Logo PVBT - Escola de Beach Tennis" />
+        <img
+          src="./assets/images/logo-pvbt-beach-tennis.png"
+          alt="Logo PVBT - Escola de Beach Tennis"
+          class="w-10 h-10"
+        />
         <div class="footer-info text-orange-500">
           <p class="text-sm font-bold">PVBT - Escola de Beach Tennis</p>
           <p class="text-xs">desenvolvido por Joares Miranda</p>
