create slide photos to classes

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       href="https://fonts.googleapis.com/css2?family=Young+Serif&display=swap"
       rel="stylesheet"
     />
+
     <title>PVBT - Escola de Beach Tennis</title>
   </head>
   <body>
@@ -69,12 +70,19 @@
           <h2 class="title-section text-3xl lg:text-4xl xl:text-5xl text-orange-500 mb-4">
             Sobre a escola
           </h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis diam nec mauris dapibus
-            accumsan vitae vestibulum urna. Curabitur id sem in justo pulvinar faucibus nec vitae
-            libero. Proin risus sem, varius vel dictum id, tempus vel ligula. Vivamus et viverra
-            justo. Aliquam ut justo gravida, vehicula nibh in, aliquet magna.
-          </p>
+          <div class="space-y-2">
+            <p>A PVBT é fruto de um sonho idealizado em 2016 pelo fundador Paulo Victor.</p>
+            <p>
+              Hoje somos uma escola de beach tennis localizada na Praia de Iracema, coração da
+              capital do Ceará, com aulas individuais, em grupo e/ou avulsas, para alunos de todos
+              os níveis, do iniciante ao avançado.
+            </p>
+            <p>
+              Contamos com um time de professores certificados e aulas dinâmicas para tornar sua
+              evolução no beach tennis ainda mais divertida.
+            </p>
+            <p><span class="font-bold">Bora pro play</span> com a gente!</p>
+          </div>
         </div>
       </section>
 
@@ -126,8 +134,19 @@
             </p>
           </div>
         </div>
+
         <div class="turmas--picture relative -top-16 hidden lg:flex lg:h-1/2 justify-end w-full">
-          <img src="./assets/images/aula-beach-tennis.png" />
+          <div class="mySlides fade">
+            <img src="https://picsum.photos/id/237/750/500" />
+          </div>
+
+          <div class="mySlides fade">
+            <img src="./assets/images/aula-beach-tennis.png" />
+          </div>
+
+          <div class="mySlides fade">
+            <img src="https://picsum.photos/id/112/750/500" />
+          </div>
         </div>
       </section>
 
@@ -249,5 +268,6 @@
         </div>
       </footer>
     </div>
+    <script src="./assets/js/scripts.js"></script>
   </body>
 </html>
