update slide and infos

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
             Sobre a escola
           </h2>
           <div class="space-y-2">
-            <p>A PVBT é fruto de um sonho idealizado em 2016 pelo fundador Paulo Victor.</p>
             <p>
-              Hoje somos uma escola de beach tennis localizada na Praia de Iracema, coração da
-              capital do Ceará, com aulas individuais, em grupo e/ou avulsas, para alunos de todos
-              os níveis, do iniciante ao avançado.
+              A escola de beach tennis PVBT é fruto de um sonho idealizado pelo fundador Paulo
+              Vitor, localizada na Praia de Iracema, coração da capital do Ceará, com aulas
+              individuais, em grupo e/ou avulsas, para alunos de todos os níveis, do iniciante ao
+              avançado.
             </p>
             <p>
               Contamos com um time de professores certificados e aulas dinâmicas para tornar sua
@@ -137,15 +137,19 @@
 
         <div class="turmas--picture relative -top-16 hidden lg:flex lg:h-1/2 justify-end w-full">
           <div class="mySlides fade">
-            <img src="https://picsum.photos/id/237/750/500" />
+            <img src="./assets/images/pvbt-slide-turma.png" />
           </div>
 
           <div class="mySlides fade">
-            <img src="./assets/images/aula-beach-tennis.png" />
+            <img src="./assets/images/pvbt-slide-alunos-play.png" />
           </div>
 
           <div class="mySlides fade">
-            <img src="https://picsum.photos/id/112/750/500" />
+            <img src="./assets/images/pvbt-slide-play.png" />
+          </div>
+
+          <div class="mySlides fade">
+            <img src="./assets/images/pvbt-slide-aluno-saque.png" />
           </div>
         </div>
       </section>
@@ -161,17 +165,17 @@
           Nossos professores
         </h2>
         <div class="flex flex-wrap justify-center xl:justify-start -space-x-8 gap-4 px-4">
-          <div class="teacher relative w-1/2 sm:w-[265px]">
+          <!--div class="teacher relative w-1/2 sm:w-[265px]">
             <img src="./assets/images/thumbnail-teacher.png" alt="Professor PVBT: Paulo Victor" />
             <h3
               class="absolute bottom-2 sm:bottom-8 w-full bg-black/[0.7] px-8 py-2 text-white text-base sm:text-xl title-section"
             >
-              Paulo Victor
+              Paulo Vitor
             </h3>
-          </div>
+          </div-->
           <div class="teacher relative w-1/2 sm:w-[265px]">
             <img
-              src="./assets/images/thumbnail-teacher.png"
+              src="./assets/images/prof-victor-mesquita.png"
               alt="Professor PVBT: Victor Mesquita"
             />
             <h3
@@ -180,16 +184,16 @@
               Victor Mesquita
             </h3>
           </div>
-          <div class="teacher relative w-1/2 sm:w-[265px]">
+          <!--div class="teacher relative w-1/2 sm:w-[265px]">
             <img src="./assets/images/thumbnail-teacher.png" alt="Professor PVBT: Abner Mateus" />
             <h3
               class="absolute bottom-2 sm:bottom-8 w-full bg-black/[0.7] px-8 py-2 text-white text-base sm:text-xl title-section"
             >
               Abner Mateus
             </h3>
-          </div>
+          </div-->
           <div class="teacher relative w-1/2 sm:w-[265px]">
-            <img src="./assets/images/thumbnail-teacher.png" alt="Professor PVBT: Natãn Sales" />
+            <img src="./assets/images/prof-natan-sales.png" alt="Professor PVBT: Natãn Sales" />
             <h3
               class="absolute bottom-2 sm:bottom-8 w-full bg-black/[0.7] px-8 py-2 text-white text-base sm:text-xl title-section"
             >
@@ -197,7 +201,7 @@
             </h3>
           </div>
           <div class="teacher relative w-1/2 sm:w-[265px]">
-            <img src="./assets/images/thumbnail-teacher.png" alt="Professor PVBT: Cauê Aragão" />
+            <img src="./assets/images/prof-caue-aragao.png" alt="Professor PVBT: Cauê Aragão" />
             <h3
               class="absolute bottom-2 sm:bottom-8 w-full bg-black/[0.7] px-8 py-2 text-white text-base sm:text-xl title-section"
             >
@@ -218,7 +222,7 @@
               <h3 class="font-bold">Endereço</h3>
               <address>
                 <p>Aterro da Praia de Iracema</p>
-                <p>Av. Historiador Raimundo Girão, 955 - Meireles</p>
+                <p>Av. Historiador Raimundo Girão, 960 - Meireles</p>
                 <p>Fortaleza/Ceará</p>
               </address>
             </div>
