add tags og for seo

--- a/index.html
+++ b/index.html
@@ -4,19 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <meta property="title" content="PVBT - Escola de Beach Tennis em Fortaleza - Ceará" />
     <meta
       name="description"
       content="Escola de beach tennis localizada na Praia de Iracema, coração da cidade de Fortaleza - Ceará. Aulas individuais, em grupo ou avulsas, com professores certificados."
     />
-
     <meta
       name="keywords"
       content="beach, tennis, aula, praia, tênis, experimental, treino, play, escola, fortaleza, ceará, iracema, beira-mar, esporte"
     />
+    <link rel="canonical" href="http://www.pvbt.com.br" />
+
+    <meta property="og:title" content="PVBT - Escola de Beach Tennis em Fortaleza/Ceará" />
+    <meta
+      property="og:description"
+      content="Escola de beach tennis localizada na Praia de Iracema, com aulas individuais, em grupo ou avulsas."
+    />
+    <meta property="og:url" content="https://www.pvbt.com.br" />
+    <meta property="og:image" content="./assets/images/logo-pvbt-beach-tennis.png" />
 
     <meta name="author" content="Joares Miranda" />
-
-    <link rel="canonical" href="http://www.pvbt.com.br" />
 
     <link href="output.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
