insert absolute path for icon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta property="title" content="PVBT - Escola de Beach Tennis em Fortaleza - Ceará" />
+    <meta property="title" content="PVBT - Escola de Beach Tennis em Fortaleza/Ceará" />
     <meta
       name="description"
       content="Escola de beach tennis localizada na Praia de Iracema, coração da cidade de Fortaleza - Ceará. Aulas individuais, em grupo ou avulsas, com professores certificados."
@@ -12,6 +12,10 @@
     <meta
       name="keywords"
       content="beach, tennis, aula, praia, tênis, experimental, treino, play, escola, fortaleza, ceará, iracema, beira-mar, esporte"
+    />
+    <meta
+      property="image"
+      content="https://www.pvbt.com.br/assets/images/logo-pvbt-beach-tennis.png"
     />
     <link rel="canonical" href="http://www.pvbt.com.br" />
 
@@ -21,7 +25,10 @@
       content="Escola de beach tennis localizada na Praia de Iracema, com aulas individuais, em grupo ou avulsas."
     />
     <meta property="og:url" content="https://www.pvbt.com.br" />
-    <meta property="og:image" content="./assets/images/logo-pvbt-beach-tennis.png" />
+    <meta
+      property="og:image"
+      content="https://www.pvbt.com.br/assets/images/logo-pvbt-beach-tennis.png"
+    />
 
     <meta name="author" content="Joares Miranda" />
 
