--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
     />
     <meta
       property="image"
-      content="https://www.pvbt.com.br/assets/images/logo-pvbt-beach-tennis.png"
+      content="https://www.pvbt.com/br/assets/images/pvbt-thumbail.png"
+      type="image/png"
+    />
+    <meta
+      itemprop="image"
+      content="https://www.pvbt.com/br/assets/images/pvbt-thumbail.png"
+      type="image/png"
     />
     <link rel="canonical" href="http://www.pvbt.com.br" />
 
@@ -27,7 +33,8 @@
     <meta property="og:url" content="https://www.pvbt.com.br" />
     <meta
       property="og:image"
-      content="https://www.pvbt.com.br/assets/images/logo-pvbt-beach-tennis.png"
+      content="https://www.pvbt.com/br/assets/images/pvbt-thumbail.png"
+      type="image/png"
     />
 
     <meta name="author" content="Joares Miranda" />
