fix wrong url for thumbnail

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     />
     <meta
       property="image"
-      content="https://www.pvbt.com/br/assets/images/pvbt-thumbail.png"
+      content="https://www.pvbt.com.br/assets/images/pvbt-thumbail.png"
       type="image/png"
     />
     <meta
       itemprop="image"
-      content="https://www.pvbt.com/br/assets/images/pvbt-thumbail.png"
+      content="https://www.pvbt.com.br/assets/images/pvbt-thumbail.png"
       type="image/png"
     />
-    <link rel="canonical" href="http://www.pvbt.com.br" />
+    <link rel="canonical" href="https://www.pvbt.com.br" />
 
     <meta property="og:title" content="PVBT - Escola de Beach Tennis em Fortaleza/Ceará" />
     <meta
@@ -33,7 +33,7 @@
     <meta property="og:url" content="https://www.pvbt.com.br" />
     <meta
       property="og:image"
-      content="https://www.pvbt.com/br/assets/images/pvbt-thumbail.png"
+      content="https://www.pvbt.com.br/assets/images/pvbt-thumbail.png"
       type="image/png"
     />
 
