fix position gallery for teachers

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         >
           Nossos professores
         </h2>
-        <div class="flex flex-wrap justify-center xl:justify-start -space-x-8 gap-4 px-4">
+        <div class="flex flex-wrap justify-center lg:justify-start -space-x-8 gap-4 px-4">
           <!--div class="teacher relative w-1/2 sm:w-[265px]">
             <img src="./assets/images/thumbnail-teacher.png" alt="Professor PVBT: Paulo Victor" />
             <h3
