--- a/index.html
+++ b/index.html
@@ -186,14 +186,14 @@
           Nossos professores
         </h2>
         <div class="flex flex-wrap justify-center lg:justify-start -space-x-8 gap-4 px-4">
-          <!--div class="teacher relative w-1/2 sm:w-[265px]">
-            <img src="./assets/images/thumbnail-teacher.png" alt="Professor PVBT: Paulo Victor" />
+          <div class="teacher relative w-1/2 sm:w-[265px]">
+            <img src="./assets/images/prof-paulo-vitor.png" alt="Professor PVBT: Paulo Victor" />
             <h3
               class="absolute bottom-2 sm:bottom-8 w-full bg-black/[0.7] px-8 py-2 text-white text-base sm:text-xl title-section"
             >
               Paulo Vitor
             </h3>
-          </div-->
+          </div>
           <div class="teacher relative w-1/2 sm:w-[265px]">
             <img
               src="./assets/images/prof-victor-mesquita.png"
@@ -219,6 +219,14 @@
               class="absolute bottom-2 sm:bottom-8 w-full bg-black/[0.7] px-8 py-2 text-white text-base sm:text-xl title-section"
             >
               Natãn Sales
+            </h3>
+          </div>
+          <div class="teacher relative w-1/2 sm:w-[265px]">
+            <img src="./assets/images/prof-caue-aragao.png" alt="Professor PVBT: Cauê Aragão" />
+            <h3
+              class="absolute bottom-2 sm:bottom-8 w-full bg-black/[0.7] px-8 py-2 text-white text-base sm:text-xl title-section"
+            >
+              Cauê Aragão
             </h3>
           </div>
         </div>
