change whatsapp number

--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
             <ul class="list-disc ml-6">
               <li>Segunda a Sexta</li>
               <li>de 17h às 21h</li>
-              <li>Reservas: <a href="tel:+5585996811924" target="_blank">(85) 98787.1076</a></li>
+              <li>Reservas: <a href="tel:+5585987871076" target="_blank">(85) 98787.1076</a></li>
             </ul>
           </div>
           <div>
-            <h3 class="font-bold">Que tal uma aula experimental gratuita?</h3>
+            <h3 class="font-bold">Que tal uma aula experimental?</h3>
             <p class="flex items-center mt-1">
-              <a href="https://api.whatsapp.com/send?phone=5585996811924" target="_blank"
+              <a href="https://api.whatsapp.com/send?phone=5585987871076" target="_blank"
                 ><img
                   src="./assets/images/bt_whatsapp.png"
                   alt="Botão para chat no whatsapp"
@@ -231,12 +231,12 @@
             <div>
               <p>
                 <span class="font-bold">Informações:</span>
-                <a href="tel:+5585996811924" target="_blank">+55 (85) 98787.1076</a>
+                <a href="tel:+5585987871076" target="_blank">+55 (85) 98787.1076</a>
               </p>
               <p>
                 <span class="font-bold">whatsapp:</span>
-                <a href="https://api.whatsapp.com/send?phone=5585996811924" target="_blank"
-                  >(85) 99681.1924</a
+                <a href="https://api.whatsapp.com/send?phone=5585987871076" target="_blank"
+                  >(85) 98787.1076</a
                 >
               </p>
             </div>
